--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head><title>Pico 2 W Server</title></head>
-    <body>
-        <h1>Pico 2 W HTTP Server</h1>
-        <p>RSSI: {{rssi}}</p>
-        <p>Uptime: {{uptime_sec}} seconds</p>
-        <p>Message: {{message}}</p>
+    <body style="background-color: slateblue;">
+        <h1 style="color: white; text-align: center; font-size: 160%;"> 
+            Pico 2 W HTTP Server
+        </h1>
+        <hr>
+        <p style="color: white;">RSSI: {{rssi}}</p>
+        <p style="color: white;">Uptime: {{uptime_sec}} seconds</p>
+        <p style="color: white;">Message: {{message}}</p>
+        <hr>
+        <div style="text-align: center;">
+            <a 
+            style="color: white; font-size: 160%;" 
+            href="https://github.com/ryan-rashidian?tab=repositories"
+            >
+                GitHub
+            </a>
+        </div>
     </body>
 </html>
